Fix footer overlap (#126)

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -45,13 +45,9 @@
     height: 60px;
     margin-top: 20px;
     padding-top: 20px;
-    position: absolute;
+    display: flex;
+    flex-direction: column;
+    position: relative;
     text-align: right;
     width: 100%;
-  }
-
-@media screen and (max-width: 1024px){
-    .footer {
-      position: relative;
-    }
   }
